--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,43 @@
+amqp==5.3.1
 annotated-types==0.7.0
+anyio==4.12.1
+billiard==4.2.4
 blinker==1.9.0
+celery==5.6.2
+certifi==2026.1.4
 click==8.3.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
+distro==1.9.0
+dnspython==2.8.0
 Flask==3.1.2
 flask-cors==6.0.2
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.11
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jiter==0.13.0
+kombu==5.6.2
 MarkupSafe==3.0.3
+openai==2.16.0
+packaging==26.0
+prompt_toolkit==3.0.52
 pydantic==2.12.5
 pydantic_core==2.41.5
+pymongo==4.16.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+redis==7.1.0
+six==1.17.0
+sniffio==1.3.1
+tqdm==4.67.3
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzdata==2025.3
+tzlocal==5.3.1
+vine==5.1.0
+wcwidth==0.5.3
 Werkzeug==3.1.5
