Store entry as vector using ChromaDB, Update Schemas

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -9,11 +9,11 @@ services:
       - "5000:5000"
     env_file:
       - .env
-    environment:
-      - CELERY_BROKER_URL=redis://redis:6379/0
-      - CELERY_RESULT_BACKEND=redis://redis:6379/0
     depends_on:
       - redis
+    volumes:
+      - chroma_data:/app/data/chroma_journal
+
 
   celery:
     build: .
@@ -21,14 +21,18 @@ services:
     command: celery -A app.celery_app.celery worker -l info
     env_file:
       - .env
-    environment:
-      - CELERY_BROKER_URL=redis://redis:6379/0
-      - CELERY_RESULT_BACKEND=redis://redis:6379/0
     depends_on:
       - redis
+    volumes:
+      - chroma_data:/app/data/chroma_journal
+
 
   redis:
     image: redis:7
     container_name: journal_redis
     ports:
       - "6379:6379"
+  
+
+volumes:
+  chroma_data:
